--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "restart": "pm2 restart Ethix-MD"
   },
   "dependencies": {
-    "baileys-anya": "*",
+    "@yupra/baileys": "*",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
@@ -18,6 +18,6 @@
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "pino": "^9.6.0",
-    "pm2": "^5.4.0"
+    "pm2": "^5.4.0",
   }
 }
