--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "restart": "pm2 restart Ethix-MD"
   },
   "dependencies": {
-    "@yupra/baileys": "*",
+    "baileys-york": "*",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
